Revision history for Dist::Zilla::MintingProfile::Author::Caelum

{{$NEXT}}

0.02 2012-12-26 06:49:59
    - expand SYNOPSIS

0.01 2012-12-26 06:28:54
    - first release