@@ -17,3 +17,8 @@ is_template = 1
 content = .*.sw[nop]
 content = .build/
 content = {{$dist->name}}-*
+
+[Git::Init]
+
+[GitHub::Create]
+prompt = 1
