@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::MintingProfile::Author::Caelum
 
 {{$NEXT}}
+    - add Git::Init and GitHub::Create (with a prompt), docs
 
 0.02 2012-12-26 06:49:59
     - expand SYNOPSIS
